# hydra

./: .gitignore  README.md
hydra/: CMakeLists.txt  alignment.cpp  alignment.hpp  cluster.cpp  cluster.hpp  cmd_parser.cpp  cmd_parser.hpp  correspondence.cpp  correspondence.hpp  edge.cpp  edge.hpp  envelope.cpp  envelope.hpp  grid.cpp  grid.hpp  main.cpp  msms_validation.cpp  msms_validation.hpp  peptide.cpp  peptide.hpp  writer.cpp  writer.hpp
hydra/rapidXML/: rapidxml_ext.hpp
hydra_tools/: hydra_tools-0.0.1.gem  hydra_tools-0.5.0.gem  hydra_tools.gemspec
hydra_tools/lib/: hydra_tools.rb
hydra_tools/lib/db/: init_db.rb
hydra_tools/lib/generic/: feature.rb
hydra_tools/lib/hydra/: envelope_map.rb
hydra_tools/lib/jsms/parsers/: csv_to_envelope_map.rb
hydra_tools/lib/mzXML/: parse_ms1.rb
hydra_tools/lib/mzXML/parsers/: ms1_points.rb
hydra_tools/lib/openMS/: featureXML.rb  fill_traces.rb  parse_featureXML.rb
hydra_tools/lib/openMS/parsers/: featureXML.rb
hydra_tools/lib/parse/: start_parse.rb
testing/2_files/: hydra_run.consensusXML
